raw/jld-day15-parser--2016-11-09-12-29-18--0.log
commit bca365e688f0424fb99d38d477a9b7863bb070d3
Merge: 02aa428 a449bdb
Author: bors <bors@rust-lang.org>
Date:   Wed Nov 9 08:51:23 2016 -0800

    Auto merge of #36520 - estebank:dataless-enum, r=brson
    
    Reword error when data-less enum variant called as function
    
    Given a file like:
    
    ``` rust
    enum Test {
        Variant,
        Variant2 {a: u32},
    }
    
    fn main(){
        let x = Test::Variant("Hello");
        let y = Test::Variant2("World");
    }
    ```
    
    Both errors now look similar:
    
    ``` bash
    error[E0423]: `Test::Variant2` is the name of a struct or struct variant, but this expression uses it like a function name
      --> file3.rs:10:13
       |
    10 |     let y = Test::Variant2("Hello");
       |             ^^^^^^^^^^^^^^ struct called like a function
       |
       = help: did you mean to write: `Test::Variant2 { /* fields */ }`?
    
    error: `Test::Variant` is the name of a data-less enum, but this expression uses it like a function name
     --> file3.rs:9:13
      |
    9 |     let x = Test::Variant("World");
      |             ^^^^^^^^^^^^^^^^^^^^^^ data-less enum called like a function
      |
      = help: did you mean to write: `Test::Variant`?
    note: defined here
     --> file3.rs:2:5
      |
    2 |     Variant,
      |     ^^^^^^^
    
    error: aborting due to previous error
    ```
    
    Re: #28533
rustc: ./jld-day15-parser
cargo rustc -- -Ztime-passes -Zinput-stats
   Compiling combine v1.3.0
   Compiling day15 v0.1.0 (file:///root/benchmarks/jld-day15-parser)
time: 0.000; rss: 41MB	parsing
Lines of code:             72
Pre-expansion node count:  654
time: 0.000; rss: 41MB	recursion limit
time: 0.000; rss: 41MB	crate injection
time: 0.000; rss: 41MB	plugin loading
time: 0.000; rss: 41MB	plugin registration
time: 0.016; rss: 69MB	expansion
time: 0.000; rss: 69MB	maybe building test harness
time: 0.000; rss: 69MB	maybe creating a macro crate
Post-expansion node count: 1155
time: 0.000; rss: 69MB	checking for inline asm in case the target doesn't support it
time: 0.000; rss: 69MB	complete gated feature checking
time: 0.000; rss: 69MB	early lint checks
time: 0.000; rss: 69MB	AST validation
time: 0.003; rss: 69MB	name resolution
time: 0.000; rss: 69MB	lowering ast -> hir
time: 0.000; rss: 69MB	indexing hir
time: 0.000; rss: 69MB	attribute checking
time: 0.000; rss: 69MB	language item collection
time: 0.000; rss: 69MB	lifetime resolution
time: 0.000; rss: 69MB	looking for entry point
time: 0.000; rss: 69MB	looking for plugin registrar
time: 0.000; rss: 69MB	region resolution
time: 0.000; rss: 69MB	loop checking
time: 0.000; rss: 69MB	static item recursion checking
time: 0.000; rss: 69MB	compute_incremental_hashes_map
time: 0.000; rss: 69MB	load_dep_graph
time: 0.001; rss: 69MB	type collecting
time: 0.000; rss: 69MB	variance inference
time: 0.005; rss: 69MB	coherence checking
time: 0.005; rss: 69MB	wf checking
time: 0.000; rss: 69MB	item-types checking
time: 0.026; rss: 73MB	item-bodies checking
time: 0.000; rss: 73MB	drop-impl checking
time: 0.001; rss: 73MB	const checking
time: 0.000; rss: 73MB	privacy checking
time: 0.000; rss: 73MB	stability index
time: 0.000; rss: 73MB	intrinsic checking
time: 0.000; rss: 73MB	effect checking
time: 0.000; rss: 73MB	match checking
time: 0.000; rss: 73MB	liveness checking
time: 0.000; rss: 73MB	rvalue checking
time: 0.001; rss: 77MB	MIR dump
  time: 0.000; rss: 77MB	SimplifyCfg
  time: 0.000; rss: 77MB	QualifyAndPromoteConstants
  time: 0.000; rss: 77MB	TypeckMir
  time: 0.000; rss: 77MB	SimplifyBranches
  time: 0.000; rss: 77MB	SimplifyCfg
time: 0.001; rss: 77MB	MIR cleanup and validation
time: 0.001; rss: 77MB	borrow checking
time: 0.000; rss: 77MB	reachability checking
time: 0.000; rss: 77MB	death checking
time: 0.000; rss: 77MB	stability checking
time: 0.000; rss: 77MB	unused lib feature checking
time: 0.003; rss: 77MB	lint checking
time: 0.001; rss: 77MB	resolving dependency formats
  time: 0.000; rss: 77MB	NoLandingPads
  time: 0.000; rss: 77MB	SimplifyCfg
  time: 0.000; rss: 77MB	EraseRegions
  time: 0.000; rss: 77MB	AddCallGuards
  time: 0.001; rss: 77MB	ElaborateDrops
  time: 0.000; rss: 77MB	NoLandingPads
  time: 0.000; rss: 77MB	SimplifyCfg
  time: 0.000; rss: 77MB	InstCombine
  time: 0.002; rss: 77MB	Deaggregator
  time: 0.000; rss: 77MB	CopyPropagation
  time: 0.000; rss: 77MB	SimplifyLocals
  time: 0.000; rss: 77MB	AddCallGuards
  time: 0.000; rss: 77MB	PreTrans
time: 0.004; rss: 77MB	MIR optimisations
  time: 0.000; rss: 77MB	write metadata
  time: 0.124; rss: 83MB	translation item collection
  time: 0.003; rss: 86MB	codegen unit partitioning
  time: 0.003; rss: 96MB	internalize symbols
time: 0.591; rss: 96MB	translation
time: 0.000; rss: 96MB	assert dep graph
time: 0.000; rss: 96MB	serialize dep graph
  time: 0.019; rss: 88MB	llvm function passes [0]
  time: 0.001; rss: 88MB	llvm module passes [0]
  time: 0.359; rss: 93MB	codegen passes [0]
  time: 0.000; rss: 93MB	codegen passes [0]
time: 0.380; rss: 93MB	LLVM passes
time: 0.000; rss: 93MB	serialize work products
  time: 0.081; rss: 82MB	running linker
time: 0.083; rss: 82MB	linking
done
